# python-coverage-demo

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
python_coverage_demo/: demo.py
tests/: test_python_coverage_demo.py
